Fix overflow bug on HP

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -545,6 +545,7 @@ a .status-alt{
 // ---------------------------------
 // dark theme
 .home-hero {
+  overflow: hidden;
   position: relative;
   padding-top: calc(var(--gutter-xlarge) * 1.5);
   padding-bottom: calc(var(--gutter-xlarge) * 1.5);
